# ffx

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
ffx/: __main__.py  analyse.py  build.py  hardware.py  models.py  preflight.py  presets.py  probe.py  recipes.py  runner.py
ffx/operations/: __init__.py  _filterescape.py  caption.py  colour.py  composite.py  convert.py  crop.py  cut.py  filters.py  metadata.py  orientate.py  repair.py  scale.py  sequence.py  sound.py  text.py  thumbnail.py  time.py  timecode.py
ffx/tui/: app.py  forms.py  screens.py  session.py
ffx/ui/: prompts.py  theme.py
tests/: test_analyse.py  test_build.py  test_colour_orientate_text.py  test_composite.py  test_convert_hap.py  test_cut.py  test_filters.py  test_forms.py  test_hardware.py  test_main_smoke.py  test_metadata_repair.py  test_phase5.py  test_preflight.py  test_presets.py  test_probe.py  test_prompts.py  test_recipe_ui.py  test_recipes.py  test_runner.py  test_sequence_replace_still.py  test_time_sound.py  test_tui.py  test_wizard.py
