[project]
name = "ffx"
version = "0.2.0"
description = "A beautiful, friendly frontend for FFmpeg — btop-inspired, wizard-driven"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "InquirerPy>=0.3.4",
    "textual>=8.2.8",
]

[project.scripts]
ffx = "ffx.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
